coverflow: enhance example + fix css + fix cover selection. should be more easy now.

--- a/pymt/data/default.css
+++ b/pymt/data/default.css
@@ -259,7 +259,7 @@ video {
 }
 
 coverflow {
-    bg-color: rgba(255,255,255,255);
+    bg-color: rgb(0, 0, 0);
 }
 
 touchring {
